syntax = "proto3";

package protobuff;

option go_package = "github.com/whattheearl/fig/pkg/profilepb";


message UsernameRequest {
  string  username = 1;
}

message EmailRequest {
  string  email = 1;
}

message IdRequest {
  string  id = 1;
}

message CreateRequest {
  string  name = 2;
  string  username = 3;
  string  email = 5;
}

message UpdateRequest {
  string  id = 1;
  string  name = 2;
  string  username = 3;
  string  summary = 4;
  string  email = 5;
}

message ProfileResponse {
  string  id = 1;
  string  name = 2;
  string  username = 3;
  string  summary = 4;
  string  email = 5;
}

message Empty {

}

service ProfileService {
  rpc GetByUsername(UsernameRequest) returns (ProfileResponse);
  rpc GetByEmail(EmailRequest) returns (ProfileResponse);
  rpc GetById(IdRequest) returns (ProfileResponse);
  rpc RemoveById(IdRequest) returns (Empty);
  rpc UpdateById(UpdateRequest) returns (ProfileResponse);
  rpc Create(CreateRequest) returns (ProfileResponse);
}